--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,1 +1,14 @@
-{}
+{
+  "scripts": {
+    "start": "nodemon index"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.0"
+  }
+}
